# business_ready

./: MANIFEST.in  README.md  from_csv_example.py  from_testbed_example.py  pyproject.toml  spreadsheet.csv  testbed.yml  usecase.md
business_ready/: MANIFEST.in  NOTICE
business_ready/src/: IOS_show_ip_interface_brief.j2  IOS_show_ip_interface_brief.py  __main__.py  brd.py
business_ready/src/businessready/: __init__.py
src/businessready/: DNAC_assurance_tests.j2  DNAC_assurance_tests.py  DNAC_device.j2  DNAC_device.py  DNAC_device_backplane.j2  DNAC_device_chassis.j2  DNAC_device_compliance.j2  DNAC_device_fan.j2  DNAC_device_health.j2  DNAC_device_insight_speed_duplex.j2  DNAC_device_insight_vlan.j2  DNAC_device_interface.j2  DNAC_device_module.j2  DNAC_device_other.j2  DNAC_device_poe.j2  DNAC_device_power.j2  DNAC_device_processor.j2  DNAC_device_stack.j2  DNAC_device_vlan.j2  DNAC_flow_analysis.j2  DNAC_flow_analysis.py  DNAC_network_health.j2  DNAC_physical_topology.j2  DNAC_physical_topology.py  DNAC_projects.j2  DNAC_projects.py  DNAC_rf_profiles.j2  DNAC_rf_profiles.py  DNAC_routing_topology.j2  DNAC_routing_topology.py  DNAC_site_health.j2  DNAC_site_health.py  DNAC_site_member.j2  DNAC_site_member.py  DNAC_sites.j2  DNAC_sites.py  DNAC_swim.j2  DNAC_swim.py  DNAC_templates.j2  DNAC_templates.py  (+262 more)
topology_examples/: python_for_loop_example.py
