[tool.poetry]
name = 'businessready'
version = "0.4.33"
description = "Transform Cisco CLIs and APIs into Business Ready Documents"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "businessready", from = "src"}]

[tool.poetry.scripts]
wikimd = 'brd.script:run'

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "2.11.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"